Added a file to track open issues Make modifications to defaults Added in a way to reload the svg code witout haveing to quit sketchup

--- a/FlightsOfIdeas/svgExportDialog.html
+++ b/FlightsOfIdeas/svgExportDialog.html
@@ -142,8 +142,8 @@ function setDefaults(defaults)
 {	
 	document.getElementById("exportHidden").checked = false;
 	document.getElementById("exportOutline").checked = true;
-	document.getElementById("exportdissect").checked = true;
-	document.getElementById("exportOrphans").checked = true;
+	document.getElementById("exportdissect").checked = false;
+	document.getElementById("exportOrphans").checked = false;
 	document.getElementById("exportText").checked = false;	
 	previousUnits="mm";		
 
